--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,13 +3,11 @@ name: Node Github CI
 on:
   push:
     branches:
-      - master
+      - develop
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [8.x, 10.x, 12.x]
@@ -20,7 +18,17 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install and test
+
+    - name: npm install and test API
+    working-directory: ./api
+      run: |
+        npm install
+        npm test
+      env:
+        CI: true
+
+    - name: npm install and test WEB
+    working-directory: ./web
       run: |
         npm install
         npm test
