--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,11 +3,13 @@ name: Node Github CI
 on:
   push:
     branches:
-      - develop
+      - master
 
 jobs:
   test:
+
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [8.x, 10.x, 12.x]
@@ -18,17 +20,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-
-    - name: npm install and test API
-    working-directory: ./api
-      run: |
-        npm install
-        npm test
-      env:
-        CI: true
-
-    - name: npm install and test WEB
-    working-directory: ./web
+    - name: npm install and test
       run: |
         npm install
         npm test
